--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
-<IfModule mod_php5.c>
-php_value auto_prepend_file 'conf.php'
-</IfModule>
+
+php_value include_path ".:myapp"
+php_value auto_prepend_file conf.php
