--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Thu Jul 19 21:37:13 JST 2012
+#Fri Jul 20 07:58:33 JST 2012
 eclipse.preferences.version=1
-include_path=0;/myapp\u00050;/myapp/css
+include_path=0;/myapp
